# linky

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_get_data_from_api.ipynb
src/: api.py  config.py  data.py  paths.py  utils.py
