[tool.poetry]
name = "linky"
version = "0.1.0"
description = "TimeSeries project providing analysis of electrical data from Linky meters"
authors = ["Julien Leparoux <julien.leparoux@gmail.com>"]
readme = "README.md"
packages = [{include = "linky", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
